--- a/newweb.html
+++ b/newweb.html
@@ -110,29 +110,35 @@ Bitesize provides support for learners aged 3 to 16+ across a wide range of scho
 
 <br>
 <br>
+<h2 id="codingproject">What is a coding project?</h2>
+<p>A coding project is a focused venture wherein a coder (or group of coders) applies their programming skills to a specific project. These can take anywhere from a couple weeks to a full year.
 
-<h1 id="codeProject">Ideas for a small coding project</h1>
+  Ultimately, the goal of a coding project is to hone your skills.
+  
+  Your coding project may range in timeframe because of new elements you decide to tack on, unexpected errors or challenges that pop up, or other time commitments that interfere.
+  
+  The best thing to remember is that you want to finish the project, so aim for something small and manageable to begin with.
+  </p>
+<h1 class="heading"id="codeProject">Ideas for a small coding project:</h1>
 
-<p class="heading" id="BuildSkills"></p>Build your skills as you work through fun, progressively challenging courses.</div>
-<h2 id="test12"></h2>
+<p class="heading" id="BuildSkills"></p>Build your skills as you work through fun, progressively challenging courses.
+
+ <h1 class="heading"id="javasriptgame">A small JavaScript game</h1>
+<p> Whether or not you’re a gamer, simply JavaScript games are a great way to create something interactive that poses a challenge to users.<p
+
+You can also integrate other programming languages such as HTML and CSS, giving you the added challenge of creating certain functionalities (think running and jumping), and the ability to flesh out some basic design elements with CSS.
+
+For something more simple, consider building out a chess game or tic-tac-toe.</p>
+
+<h1 class="heading"id="countdowntimer">Countdown timer or calculator</h1>
+</p> test your programming skills for numbers, try a countdown timer or calculator. You’ll need to create a layout and an algorithm that can process numbers and make calculations, and/or work with a calendar that counts down to a scheduled event.
+
+Generally, you can expect to use JavaScript, HTML, CSS, SQL, and NoSQL on this type of project.</p>
+
+<h1 class="heading" id="conversiontool">Create a conversion tool</h1>
+    </p>While currency conversion could be an interesting project, consider the ever-fluctuating market value of currency exchanges and how difficult that might be to track.</p>
 
 
-</p>
-</li><li class="section-documentation__sidebar__item">
-    <a href="https://motivationalinterviewing.org/understanding-motivational-interviewing">Motivational Interviewing</a>
-
-    
-</li><li class="section-documentation__sidebar__item">
-    <a href="https://nationalcareers.service.gov.uk/careers-advice/cv-sections">Building CV</a>
-
-
-
-</li><li class="section-documentation__sidebar__item">
-    <a href="https://www.masterclass.com/articles/how-to-improve-your-communication-skills">improving Communication skills</a>
-
- 
-    
-  </li>
 
   <br><br><br><br><br>
 </body>
